Fix OpenAPI doc
